# pysrim

./: README.md  pyproject.toml
.github/workflows/: test.yml  wheels.yml
srim/: __init__.py  _version.py  input.py  output.py  srim.py
srim/core/: binding.py  layer.py  material.py
tests/core/: test_material.py
