[build-system]
requires = [
    "hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "pysrim"
description = "Automation, analysis, and plotting of SRIM calculation using Python"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Christopher Ostrouchov", email = "chris.ostrouchov+pysrim@gmail.com" },
]
maintainers = [
    { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
keywords = [
    "SRIM",
    "ion-implantation",
    "materials science",
    "Monte Carlo",
    "automation",
    "plotting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "pyyaml",
]
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/rmlmcfadden/pysrim"
Repository = "https://github.com/rmlmcfadden/pysrim.git"
Issues = "https://github.com/rmlmcfadden/pysrim/issues"

[tool.hatch.version]
path = "srim/_version.py"

[tool.hatch.build]
packages = [
    "srim"
]
include = [
    "srim/data"
]
